--- a/modelo/index.html
+++ b/modelo/index.html
@@ -12,13 +12,15 @@
 <body>
 
   <section class="container">
-    <h1>Lorem ipsum dolor sit amet</h1>
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-      Repellendus nisi explicabo saepe voluptatibus consequuntur et corporis
-      maxime quos, doloribus vitae voluptatum quisquam necessitatibus
-      pariatur veritatis exercitationem beatae officiis suscipit Ea!
-    </p>
+    <h1>Calcule seu IMC</h1>
+    <form id="form">
+      <input type="text" id="peso" placeholder="Informe seu peso em kg">
+      <input type="text" id="altura" placeholder="Informe sua altura em m">
+      <button type="submit">Enviar</button>
+    </form>
+    <div id="resultado">
+
+    </div>
   </section>
 
   <script src="./assets/js/script.js"></script>
