--- a/aula047-timer/relogio/index.html
+++ b/aula047-timer/relogio/index.html
@@ -13,7 +13,7 @@
 
   <section class="container">
     <h1>Meu timer</h1>
-    <p class="relogio pausado">00:00:00</p>
+    <p class="relogio">00:00:00</p>
     <p>
       <button class="iniciar">iniciar</button>
       <button class="pausar">pausar</button>
